# auto_graph

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs
