[package]
name = "auto_graph"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = true
codegen-units = 1
strip = true  # Problematic with webassembly ?
opt-level = 3


# Optimized dependencies for dev
# [profile.dev.package."*"]
# opt-level = 3
# strip = true
# codegen-units = 1


[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
egui_extras = "0.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
