[package]
name = "auto_graph"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
strip = false # Problematic when building for the web
opt-level = 3

[profile.dev.package."*"]
opt-level = 0
codegen-units = 1

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
egui_extras = "0.19.0"
evalexpr = "8.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
