[package]
name = "auto_graph"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = false
opt-level = 3

[profile.dev.package."*"]
opt-level = 1
codegen-units = 1

[dependencies]
eframe = { version = "0.21.3", default-features = false, features = [
  "glow",
  "persistence",
] }
egui = "0.21.0"
egui_extras = "0.21.0"
evalexpr = "8.1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.34"
